--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,11 +4,11 @@ workflows:
     max_build_duration: 60
     environment:
       flutter: stable
-      vars:
-        FLUTTER_CHANNEL: stable
     scripts:
       - name: Get dependencies
         script: flutter pub get
+      - name: Clean old build
+        script: flutter clean
       - name: Build APK
         script: flutter build apk --debug
     artifacts:
