--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,15 +1,21 @@
 workflows:
-  flutter-workflow:
-    name: Flutter APK Debug
+  build-debug-apk:
+    name: Build Debug APK
     max_build_duration: 60
     environment:
       flutter: stable
+      android:
+        image: default
     scripts:
       - name: Get dependencies
-        script: flutter pub get
-      - name: Clean old build
-        script: flutter clean
-      - name: Build APK
-        script: flutter build apk --debug
+        script: |
+          flutter pub get
+      - name: Build debug APK
+        script: |
+          flutter build apk --debug --target-platform android-arm,android-arm64
     artifacts:
       - build/app/outputs/flutter-apk/app-debug.apk
+    publishing:
+      email:
+        recipients:
+          - ehsan.system67@gmail.com
