--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,8 +4,7 @@ workflows:
     max_build_duration: 60
     environment:
       flutter: stable
-      android:
-        image: default
+      xcode: latest
     scripts:
       - name: Get dependencies
         script: |
