--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,7 +4,6 @@ workflows:
     max_build_duration: 60
     environment:
       flutter: stable
-      xcode: latest
     scripts:
       - name: Get dependencies
         script: |
@@ -12,8 +11,11 @@ workflows:
       - name: Build debug APK
         script: |
           flutter build apk --debug --target-platform android-arm,android-arm64
+          ls -R build/ || true
     artifacts:
       - build/app/outputs/flutter-apk/app-debug.apk
+      - build/app/outputs/apk/debug/app-debug.apk
+      - build/app/outputs/apk/release/app-release.apk
     publishing:
       email:
         recipients:
